<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_mbf_recovery</name>
  <version>0.0.0</version>
  <description>Move base flex config for the turtlebot</description>

  <maintainer email="test@test.com">test</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
</package>
